# whisper-s2t-rs

./: .gitmodules  Cargo.toml  README.md
src/: main.rs  voice_channel.rs  whisper.rs
whisper-wrapper/: Cargo.toml
